# aegis_llm

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aegis-llm.yml
aegis_llm/: __init__.py  app.py  config.py  diagnostics.py  errors.py  logging_setup.py  main.py  schemas.py  version.py
aegis_llm/backends/: __init__.py  base.py  factory.py  ollama.py
aegis_llm/middleware/: __init__.py  access_log.py  auth.py  request_id.py
aegis_llm/routes/: health.py  openai.py
build_log/: ASSESSMENT_E2E_INTEGRATION_COVERAGE.md  AUDIT_ITERATION_04_SCHEMA.md  ITERATIONS.md  PLAN_ITERATION_01.md  PLAN_ITERATION_02.md  PLAN_ITERATION_03.md  PLAN_ITERATION_03A_INTEGRATION.md  PLAN_ITERATION_03A_SUBAGENT_BRIEFS.md  PLAN_ITERATION_03B_CONTRACT.md  PLAN_ITERATION_03C_TESTS.md  PLAN_ITERATION_03D_SCENARIO_README.md  PLAN_ITERATION_03E_BACKPRESSURE_REVIEW.md  PLAN_ITERATION_04.md  PLAN_ITERATION_05.md  README.md  REVIEW_ITERATION_03_BACKPRESSURE.md  SCENARIO_COVERAGE.md  TESTING_NOTES.md
build_log/testing_tiers/: HUB.md  LEAD_TIER_A.md  LEAD_TIER_B.md  LEAD_TIER_C.md  WORKER_A1.md  WORKER_A2.md  WORKER_A3.md  WORKER_B1.md  WORKER_B2.md  WORKER_B3.md  WORKER_C1.md  WORKER_C2.md  WORKER_C3.md
docs/: ALPHA_PUBLISH_CHECKLIST.md  API_CONTRACT.md  GETTING_STARTED.md  INTEGRATION_OPEN_WEBUI.md  SECURITY_POSTURE.md
examples/: curl_examples.sh
scripts/: smoke_compose.sh
tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_contract_streaming_sentinel.py  test_embeddings.py  test_hardening.py  test_health.py  test_integration_live.py  test_main.py  test_models.py  test_openai_contract.py  test_security_posture_warnings.py
tests/e2e_open_webui/: README.md  conftest.py  test_guard_health_browser.py  test_guard_readyz_browser.py  test_guard_v1_models_browser.py  test_open_webui_reachable.py  test_open_webui_stream_network.py
